--- a/index.html
+++ b/index.html
@@ -6,13 +6,25 @@
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-    <h1>Discover hidden places in the world around you</h1>
-    <p class="download"><a href="https://t0nqd7u6c74gcioohtarm2kv6f09h3k6dh036dgpkprkgb29q1l0.codecademy.cloud/#">Download Excursion (Coming Soon!)</a></p>
-    <div id="apppreview"></div>
-    <h2>Your personal travel guide</h2>
-    <h3>Excursion remembers places you like, and recommends new points of interest around you.</h3>
-    <h2>Coming Soon for iPhone and Android</h2>
-    <p class="download"><a href="https://t0nqd7u6c74gcioohtarm2kv6f09h3k6dh036dgpkprkgb29q1l0.codecademy.cloud/#">Download Excursion (Coming Soon!)</a></p>
-    <p id="copyright">&copy Excursion</p>
+
+    <div id ="head">
+      <h1>Discover hidden places in the world around you</h1>
+      <p class="download"><a href="https://t0nqd7u6c74gcioohtarm2kv6f09h3k6dh036dgpkprkgb29q1l0.codecademy.cloud/#">Download Excursion (Coming Soon!)</a></p>
+      <p><img src="./resources/videos/excursion.mp4"></p>
+    </div>
+
+    <div id="body">
+      <h2>Your personal travel guide</h2>
+      <h3>Excursion remembers places you like, and recommends new points of interest around you.</h3>
+      <p><img src="./resources/images/camp.jpg"></p>
+      <p><img src="./resources/images/phone.png"></p>
+    </div>
+
+    <div id="footer">
+      <h2>Coming Soon for iPhone and Android</h2>
+      <p class="download"><a href="https://t0nqd7u6c74gcioohtarm2kv6f09h3k6dh036dgpkprkgb29q1l0.codecademy.cloud/#">Download Excursion (Coming Soon!)</a></p>
+      <p id="copyright">&copy Excursion</p>
+    </div>
+
   </body>
 </html>
